expand agglomerative and case insensitive search

--- a/data/Gaussian.ipynb
+++ b/data/Gaussian.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "       [  6.80546381e-01,   6.33924282e-01,   2.08796000e+05]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -1897,12 +1897,526 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'covariance_type': 'diag',\n",
+       " 'init_params': 'kmeans',\n",
+       " 'max_iter': 100,\n",
+       " 'means_init': None,\n",
+       " 'n_components': 3,\n",
+       " 'n_init': 1,\n",
+       " 'precisions_init': None,\n",
+       " 'random_state': None,\n",
+       " 'reg_covar': 1e-06,\n",
+       " 'tol': 0.001,\n",
+       " 'verbose': 0,\n",
+       " 'verbose_interval': 10,\n",
+       " 'warm_start': False,\n",
+       " 'weights_init': None}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimator.get_params(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.63573496, -0.29221272, -0.6840524 ],\n",
+       "       [-0.82887851,  0.14242331, -0.58456253],\n",
+       "       [-1.5425099 ,  0.73264715,  0.28622451],\n",
+       "       ..., \n",
+       "       [-1.8102749 , -0.20995163, -0.12044359],\n",
+       "       [ 1.36942183, -0.62695595, -0.3422818 ],\n",
+       "       [ 0.68054638,  0.63392428, -0.5315973 ]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Comp1, Comp2, Followers, \n",
+    "pca = PCA(n_components=3)\n",
+    "pca_data_3 = pca.fit(data).transform(data)\n",
+    "# np.savetxt(\"pca.csv\", pca_data, delimiter=\",\")\n",
+    "pca_data_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pca_z_3 = [z[2] for z in pca_data_3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.68405239780081628,\n",
+       " -0.58456253375048617,\n",
+       " 0.28622451312094527,\n",
+       " 0.012209307659549914,\n",
+       " -0.092604960639057612,\n",
+       " -0.0034827866125497703,\n",
+       " 0.36975243358058807,\n",
+       " 0.48102669131170117,\n",
+       " -0.16741904739637678,\n",
+       " -0.93072586756788667,\n",
+       " 0.0033272330822075487,\n",
+       " 0.15486401973038855,\n",
+       " -0.10860832838311697,\n",
+       " -0.3446860055532005,\n",
+       " -0.3816349541927635,\n",
+       " 0.0070852020758069081,\n",
+       " -0.30753422145930742,\n",
+       " 0.15327650898071329,\n",
+       " 0.0034730813192643956,\n",
+       " 0.55021671375843173,\n",
+       " -0.050046312022900594,\n",
+       " 0.048581979118129413,\n",
+       " 0.27094896799133544,\n",
+       " 0.3474867953570383,\n",
+       " 0.30435896380167698,\n",
+       " 0.7097317198777997,\n",
+       " -0.082862405254401764,\n",
+       " -0.48844443811913796,\n",
+       " -0.30721424941545161,\n",
+       " -0.66281104198762197,\n",
+       " 0.5743481328492579,\n",
+       " -0.40625359615680062,\n",
+       " -0.037043100382738892,\n",
+       " -0.12406198678355967,\n",
+       " 0.40383617290289686,\n",
+       " 0.91809408675547821,\n",
+       " -0.23359614129266443,\n",
+       " 0.046047166783642166,\n",
+       " -0.045786908729697096,\n",
+       " -0.56211961670919075,\n",
+       " 0.44122748565127984,\n",
+       " 0.16957723120487886,\n",
+       " 0.30925180756316817,\n",
+       " 0.0076799790567742068,\n",
+       " 0.27059055338092713,\n",
+       " 0.43754789703863206,\n",
+       " -0.0051190011521734108,\n",
+       " 0.016468273917707256,\n",
+       " 0.36955540707569207,\n",
+       " 0.4859221924426298,\n",
+       " 0.39204337145202339,\n",
+       " 0.45345057409137024,\n",
+       " 0.12239763591241694,\n",
+       " -0.2500598653365087,\n",
+       " 0.29491572185125775,\n",
+       " 0.37562032739989959,\n",
+       " -0.38753158799568832,\n",
+       " 0.32010099217456867,\n",
+       " -0.31201733102874807,\n",
+       " -0.059537035040376607,\n",
+       " -0.070815338504152114,\n",
+       " -0.25202009418467664,\n",
+       " -0.76943359660021549,\n",
+       " -0.039536977194234851,\n",
+       " 0.30382132292115227,\n",
+       " 0.46917197322428073,\n",
+       " -0.094279713269368071,\n",
+       " -0.15898019076049058,\n",
+       " -0.2304989154744585,\n",
+       " -0.76350286567593062,\n",
+       " -0.78506778363868968,\n",
+       " 1.0505071324664557,\n",
+       " 0.19440513286108557,\n",
+       " 0.19973280212985944,\n",
+       " -0.34879325786580961,\n",
+       " -0.48863802902661574,\n",
+       " 0.41383393775365485,\n",
+       " -0.7509840805262219,\n",
+       " 0.61714620383984098,\n",
+       " -0.13351561931100175,\n",
+       " -0.07435000558685867,\n",
+       " 0.024734228589370771,\n",
+       " -0.70157984066939538,\n",
+       " -0.57238031557914781,\n",
+       " -0.091360212306946437,\n",
+       " 0.14746097982183423,\n",
+       " -0.23172564467025281,\n",
+       " -0.60662034948640731,\n",
+       " -0.15622663793127056,\n",
+       " -0.781769798810382,\n",
+       " -0.73764681015268674,\n",
+       " 0.3214716849644158,\n",
+       " 0.80133055666499819,\n",
+       " -0.44831737700748453,\n",
+       " -0.092339483899061603,\n",
+       " 0.018100765955767859,\n",
+       " 0.3861572900174689,\n",
+       " -0.018439869532943819,\n",
+       " 0.31212513340511916,\n",
+       " 0.10050539618399305,\n",
+       " -0.559550995580546,\n",
+       " -0.041384833330007718,\n",
+       " 0.25189426100013568,\n",
+       " -0.19008669324054023,\n",
+       " -0.077024561954168,\n",
+       " 0.17184786110437583,\n",
+       " -0.32045896157709708,\n",
+       " 0.014153972671309675,\n",
+       " -0.83774922655284056,\n",
+       " 0.80471094419013212,\n",
+       " 0.34776127039131816,\n",
+       " 0.0079086777056117941,\n",
+       " 0.28829977213158658,\n",
+       " 0.22840891943211661,\n",
+       " -0.1313734703395282,\n",
+       " 0.74490384709768298,\n",
+       " 0.70228731344842199,\n",
+       " 0.13686001461771569,\n",
+       " 0.43853610770203888,\n",
+       " 1.1368595737188048,\n",
+       " 0.39734200235773753,\n",
+       " -0.12328007046043148,\n",
+       " 0.066119166060247217,\n",
+       " -0.56865679424586257,\n",
+       " 0.3196635276833687,\n",
+       " 0.14424087471323521,\n",
+       " -0.33045807606775235,\n",
+       " -0.60728746035714765,\n",
+       " -0.04341520868252996,\n",
+       " 0.4169314017713377,\n",
+       " -0.12508069480689921,\n",
+       " 0.084209532061549922,\n",
+       " -0.34959767426700394,\n",
+       " 0.084681606148821281,\n",
+       " 0.0040490720340666739,\n",
+       " -0.033904543429712018,\n",
+       " -0.34705521663720362,\n",
+       " 0.15364335376090518,\n",
+       " -0.25738309966883205,\n",
+       " 0.010739779290820151,\n",
+       " -0.093691508305330212,\n",
+       " 0.3935439761354107,\n",
+       " -0.92976993873750891,\n",
+       " -0.5993114093332319,\n",
+       " -0.69266835994870357,\n",
+       " -0.16689212628148481,\n",
+       " -0.031623489847436154,\n",
+       " -0.14736610606159337,\n",
+       " -0.090807192156145133,\n",
+       " -0.57502296913058015,\n",
+       " -0.1621044665528267,\n",
+       " -0.24485584923829889,\n",
+       " -0.22114718993388777,\n",
+       " 0.17325791566862941,\n",
+       " -0.36588907315988439,\n",
+       " 0.010902244288670912,\n",
+       " 1.1022082265468072,\n",
+       " -0.30511266062216458,\n",
+       " 0.14107898367817706,\n",
+       " 0.27522650136438764,\n",
+       " -0.053395830626311494,\n",
+       " 0.70798265735035981,\n",
+       " -0.12470191460527,\n",
+       " -0.17751557527269496,\n",
+       " -0.43941996127677529,\n",
+       " 0.21627783872675557,\n",
+       " 0.72384878662723295,\n",
+       " -0.4207957677962173,\n",
+       " -0.8669675688871632,\n",
+       " 0.86752608404520348,\n",
+       " 0.35130285135461181,\n",
+       " 0.0022964749301786387,\n",
+       " 0.11084011473834091,\n",
+       " -0.19607249229730761,\n",
+       " 0.178542814529351,\n",
+       " 0.27162003410194485,\n",
+       " 0.12721782998616818,\n",
+       " 0.066703327685807057,\n",
+       " -0.042432143678969275,\n",
+       " -0.42384695273891843,\n",
+       " -0.3642336430670976,\n",
+       " 0.1397344544483331,\n",
+       " 0.59041394888707321,\n",
+       " -0.4047874807274866,\n",
+       " 0.33999058021419304,\n",
+       " -0.20964884675024092,\n",
+       " 0.52722318496193199,\n",
+       " -0.12870979071089125,\n",
+       " -0.30379459159285782,\n",
+       " -0.35406391600745601,\n",
+       " 0.26701400651339069,\n",
+       " 0.19478301121788835,\n",
+       " -0.53591785759879695,\n",
+       " -0.02341413325711697,\n",
+       " -0.73116223950432824,\n",
+       " 0.016895286231881142,\n",
+       " 0.20614852036000936,\n",
+       " 0.53733453763359695,\n",
+       " 0.0019973612682146202,\n",
+       " -0.18992975433111742,\n",
+       " -0.28109552932647291,\n",
+       " 0.70812583515041649,\n",
+       " -0.50443247030032123,\n",
+       " 0.18808281752821807,\n",
+       " 0.96947425287971445,\n",
+       " 0.33831300552862598,\n",
+       " -0.45141077245122013,\n",
+       " -0.092637518711933292,\n",
+       " -0.20705838138694288,\n",
+       " -0.0057501935768292378,\n",
+       " 0.0059767908212782286,\n",
+       " 0.11092165879247111,\n",
+       " 0.43047468668032068,\n",
+       " 0.13076477355298338,\n",
+       " -0.18403547140763132,\n",
+       " -0.054233163466851309,\n",
+       " -0.73709313087723705,\n",
+       " 0.76112525690963806,\n",
+       " -0.074563064904386342,\n",
+       " 0.64843832527884426,\n",
+       " 0.14725598482303232,\n",
+       " -0.10505226864319352,\n",
+       " -0.14935444137216419,\n",
+       " 0.0080156071440119145,\n",
+       " 0.18354724217072016,\n",
+       " 0.2726545694194884,\n",
+       " -0.79757487322808029,\n",
+       " 0.79562413488104,\n",
+       " 0.39148996305885742,\n",
+       " 0.30771542485429615,\n",
+       " -0.036322045492754973,\n",
+       " 0.060136228577445203,\n",
+       " -0.21055958673847458,\n",
+       " 0.21135764440110597,\n",
+       " -0.17412906433357331,\n",
+       " -0.11677076246576903,\n",
+       " -0.16352369402144243,\n",
+       " -0.093155660585975936,\n",
+       " -0.28516596691366913,\n",
+       " 0.20438436280963446,\n",
+       " 0.59359107969984637,\n",
+       " -0.090792188957400544,\n",
+       " 0.23411711699783305,\n",
+       " 0.37414179748868215,\n",
+       " 0.0050964825739542481,\n",
+       " 0.0044452845321658052,\n",
+       " 0.32942775234703781,\n",
+       " 0.1322963686052529,\n",
+       " 0.18637159303870965,\n",
+       " -0.24730641832281808,\n",
+       " -0.68741481239860192,\n",
+       " 0.076888497261957844,\n",
+       " -0.23359119775578036,\n",
+       " 0.077010719916626544,\n",
+       " -0.27921719374151749,\n",
+       " 0.032246003625167566,\n",
+       " 0.051016051090632383,\n",
+       " -1.0172544739404694,\n",
+       " 0.23031571786660052,\n",
+       " -0.2027218620318528,\n",
+       " -0.31603628494680858,\n",
+       " -0.072303056265037344,\n",
+       " -0.91173375102615939,\n",
+       " 0.46599430839421618,\n",
+       " 0.14871691939555146,\n",
+       " -0.074188296398787462,\n",
+       " -0.29215621617088594,\n",
+       " -0.01325785866049013,\n",
+       " 0.14572424143460033,\n",
+       " -0.068735102680805377,\n",
+       " -0.20509146460025959,\n",
+       " 0.25339430475829522,\n",
+       " 0.088876338684547654,\n",
+       " 0.61410466078008064,\n",
+       " 0.082283190038965018,\n",
+       " 0.30210675999398767,\n",
+       " 0.32758227119112582,\n",
+       " 0.21277104065715388,\n",
+       " 0.34382575624540013,\n",
+       " -0.52443852186330897,\n",
+       " -0.48639210738903838,\n",
+       " -0.25844122208522996,\n",
+       " -0.75813893799767829,\n",
+       " -0.054593154480031672,\n",
+       " -0.52164815135711684,\n",
+       " -0.19647623450999022,\n",
+       " -0.81124065220222796,\n",
+       " -0.15620360785432999,\n",
+       " 0.15415991246083299,\n",
+       " -0.35521657911173088,\n",
+       " 0.01698366628338116,\n",
+       " -0.36760198386716175,\n",
+       " 0.058452658892746923,\n",
+       " 0.62852372988160954,\n",
+       " -0.095278078137676081,\n",
+       " -0.50562052408355818,\n",
+       " -0.2844129018636925,\n",
+       " 0.34216004246384246,\n",
+       " 0.36174032941972661,\n",
+       " -0.33728860169373603,\n",
+       " -0.089102320664217124,\n",
+       " 0.025263948931139479,\n",
+       " 0.040293918062190376,\n",
+       " 0.32460792449173864,\n",
+       " 0.88405084714657534,\n",
+       " -0.0012618462117834003,\n",
+       " -0.38955160744516742,\n",
+       " -0.01736846327945657,\n",
+       " 0.34328474831822647,\n",
+       " -0.51195857978490844,\n",
+       " 0.57467156328926805,\n",
+       " -0.28645602744831206,\n",
+       " -0.048986742681057016,\n",
+       " -0.54533552565690047,\n",
+       " 0.93472902722928941,\n",
+       " 0.24271130608871011,\n",
+       " 0.32399924202628727,\n",
+       " -0.31457646766920583,\n",
+       " 0.06122732481588436,\n",
+       " -0.20432696313060833,\n",
+       " -0.30041699174765923,\n",
+       " 0.12795945195090694,\n",
+       " -0.025681705616980348,\n",
+       " 0.21247236652529899,\n",
+       " -0.27144411425456116,\n",
+       " 0.16126023865760561,\n",
+       " -0.55564142962457175,\n",
+       " -0.15421359069385993,\n",
+       " -0.16196258465514998,\n",
+       " -0.61155210213088362,\n",
+       " 0.67327998790764276,\n",
+       " 0.48909332449871634,\n",
+       " -0.48225086326895572,\n",
+       " -0.77152451196460681,\n",
+       " -0.081671251541848677,\n",
+       " -0.48006360948588345,\n",
+       " 0.090082125530145801,\n",
+       " 0.35724447798571402,\n",
+       " 0.50428983516020165,\n",
+       " 0.14204000081798063,\n",
+       " 0.72687774679010864,\n",
+       " -0.0014015375209981903,\n",
+       " 0.33296131935897988,\n",
+       " 0.17948804839207244,\n",
+       " 0.17402218831548272,\n",
+       " -0.57720650792383132,\n",
+       " 0.3706436403356872,\n",
+       " -0.59204740724135152,\n",
+       " 0.86520799081283151,\n",
+       " -0.6522488208138687,\n",
+       " -0.0086222709953290982,\n",
+       " -0.36754113285537737,\n",
+       " -0.2519044156171214,\n",
+       " 0.25354362222187588,\n",
+       " 0.35245344946481155,\n",
+       " 0.43670401655953672,\n",
+       " -0.073620255649483365,\n",
+       " -0.17133415770577679,\n",
+       " -0.022232621570845205,\n",
+       " 0.60800610539476341,\n",
+       " -0.040418578263714582,\n",
+       " -1.0713363705198611,\n",
+       " -0.22307259659323811,\n",
+       " -0.78998802385920741,\n",
+       " -0.43826698555512233,\n",
+       " -0.076622670095885123,\n",
+       " -0.44748335679184459,\n",
+       " -0.26940547551583655,\n",
+       " -0.0099070230392711289,\n",
+       " -0.095901000375450948,\n",
+       " -0.33557185211522783,\n",
+       " -0.61666992755842398,\n",
+       " 0.015210245894939052,\n",
+       " -0.54750537172178126,\n",
+       " 0.58159074949133283,\n",
+       " 0.13424804298061102,\n",
+       " -0.044817465188886164,\n",
+       " 0.64195707207351305,\n",
+       " 0.62935196051920039,\n",
+       " 0.88357679653688548,\n",
+       " -0.12082880427144201,\n",
+       " 0.7159863056562128,\n",
+       " 0.23588545166107527,\n",
+       " 0.16539915882788184,\n",
+       " 0.25833875778258703,\n",
+       " -0.12314374111766693,\n",
+       " -0.1016891445225309,\n",
+       " -0.31061377825671344,\n",
+       " -0.84066792889773012,\n",
+       " -0.10238227018795892,\n",
+       " -0.46545893819818174,\n",
+       " 0.55753973266619261,\n",
+       " 0.9430482507809832,\n",
+       " -0.012855724448278363,\n",
+       " 0.16920647597932703,\n",
+       " 0.3176695055093014,\n",
+       " -0.035442021858554308,\n",
+       " -0.10521832385022158,\n",
+       " 0.55225835014019031,\n",
+       " -0.47138166027515904,\n",
+       " 0.049776419029289025,\n",
+       " -0.02152105760301002,\n",
+       " -0.0083769941536117019,\n",
+       " 0.52031645507230573,\n",
+       " 0.088929118948200631,\n",
+       " 0.63056921685203504,\n",
+       " 0.5119459130293802,\n",
+       " 0.58956923670233174,\n",
+       " 0.44545121210641148,\n",
+       " 0.9253448249718661,\n",
+       " 0.026699053465093527,\n",
+       " 0.19805434364784757,\n",
+       " 0.12718649956749231,\n",
+       " -0.64191619928144494,\n",
+       " 0.58505317940393253,\n",
+       " -0.053922203964851777,\n",
+       " 0.55351856583920722,\n",
+       " 0.11538937992025397,\n",
+       " -0.046509200797454235,\n",
+       " 0.11055020269353902,\n",
+       " -0.12627529699175571,\n",
+       " -0.35185947058059452,\n",
+       " -0.23061126800617221,\n",
+       " -0.26966385047248892,\n",
+       " -0.92108784910547103,\n",
+       " 0.48526829767135277,\n",
+       " 0.18880500125763683,\n",
+       " 0.016257289178379576,\n",
+       " -0.38598215570889904,\n",
+       " -0.12044359088939102,\n",
+       " -0.34228179994791713,\n",
+       " -0.53159729618335627]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_z_3"
+   ]
   },
   {
    "cell_type": "code",
